[package]
name = "cryptnet_url_cache_parser"
description = "A parser for CryotnetURLCache metadata files"
homepage = "https://github.com/AbdulRhmanAlfaifi/CryptnetURLCacheParser-rs"
repository = "https://github.com/AbdulRhmanAlfaifi/CryptnetURLCacheParser-rs"
version = "0.2.1"
authors = ["AbdulRhman Alfaifi <a.alfaifi.14@gmail.com>"]
edition = "2018"
license = "MIT"

[lib]
name = "cryptnet_url_cache_parser"
path = "src/lib.rs"

[[bin]]
name = "cryptnet_url_cache_parser"
path = "src/bin/cryptnet_url_cache_parser.rs"

[dependencies]
chrono="0.4.15"
byteorder = "1.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
ring="0.16.18"
data-encoding="2.3.1"
clap = "2.33.0"
glob = "0.3.0"
winparsingtools = "1.1.0"